Corrigido base64